<resources>
    <string name="app_name" translatable="false">Servi</string>
    <string name="servivet_require_this_permission" translatable="false">Servi need to allow this permission.</string>
    <string name="google_map_key" translatable="false">AIzaSyDxvOzm-9yjdnd5L4iJrVDwk-_KbUkmN8A</string>
    <string name="please_connect_to_the_internet" translatable="false">Please Connect to the internet.\n</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="choose_your_preferred_language" translatable="false">Choose your\n Preferred Language</string>
    <string name="english" translatable="false">English</string>
    <string name="hi_i_am_john_doe" translatable="false">Hi, I am John Doe.</string>
    <string name="swahii" translatable="false">Swahili</string>
    <string name="habari_mimi_ni_john_doe" translatable="false">Habari, mimi ni John Doe.</string>
    <string name="zulu" translatable="false">Zulu</string>
    <string name="gps_enable_message" translatable="false">You have to turn on GPS Location</string>
    <string name="sawubona_ngingu_john_doe" translatable="false">Sawubona, ngingu-John Doe.</string>
    <string name="continues" translatable="false">Continue</string>
    <string name="skip" translatable="false">Skip</string>
    <string name="next" translatable="false">Next</string>
    <string name="get_started" translatable="false">Get Started</string>
    <string name="clientel" translatable="false">Clientelé</string>
    <string name="business" translatable="false">Business</string>
    <string name="mobile_number" translatable="false">Mobile number</string>
    <string name="we_will_send_you_a_confirmation_code" translatable="false">We will send you a confirmation code</string>
    <string name="_123_456_7890" translatable="false">123–456-7890</string>
    <string name="i_agree_to_terms_and_conditions_and_data_privacy_policies" translatable="false">I agree to Terms and Conditions and Data Privacy policies.</string>
    <string name="verify" translatable="false">Verify</string>
    <string name="please_enter_the_otp_sent_your_mobile_number" translatable="false">Please enter the OTP sent your mobile number.</string>
    <string name="otp_verification" translatable="false">OTP Verification</string>
    <string name="resend_otp_in_30_seconds" translatable="false">Resend OTP in 30 Seconds</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="search_for_area_street_name_etc" translatable="false">Search for area, street name, etc...</string>
    <string name="home" translatable="false">Home</string>
    <string name="chats" translatable="false">Chats</string>
    <string name="bookings" translatable="false">Bookings</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="noida" translatable="false">Noida</string>
    <string name="sadarpur_sector_44_noida" translatable="false">Sadarpur, Sector-44  Noida</string>
    <string name="search_for_service_etc" translatable="false"><![CDATA[search for service & etc]]></string>
    <string name="services" translatable="false">Services</string>
    <string name="view_all" translatable="false">View All\n</string>
    <string name="provider_view_all" translatable="false">ProviderViewAll</string>
    <string name="user_view_all" translatable="false">UserViewAll</string>
    <string name="online_now" translatable="false">Online now</string>
    <string name="fitness" translatable="false">Fitness</string>
    <string name="finance" translatable="false">FINANCE\n</string>
    <string name="_1_km_away" translatable="false">km. away</string>
    <string name="dev_gupta" translatable="false">Dev Gupta</string>
    <string name="gym" translatable="false">gym</string>
    <string name="riepneapps_technology_noida" translatable="false">riepneapps technology noida</string>
    <string name="view_details" translatable="false">View Details</string>
    <string name="individual" translatable="false">Individual</string>
    <string name="individualcap" translatable="false">INDIVIDUAL</string>
    <string name="institutional" translatable="false">Institutional</string>
    <string name="institutionalcap" translatable="false">INSTITUTIONAL</string>
    <string name="consumer" translatable="false">consumer</string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="abhishek_mehra" translatable="false">Abhishek Mehra</string>
    <string name="about" translatable="false">About</string>
    <string name="lorem_ipsum_dolor_sit_amet_consetetur_sadipscing_elitr_sed_diam_nonumy_eirmod_tempor_invidunt_ut_labore_et_dolore_magna_aliquyam_erat_sed_diam_voluptua_eos_et_accusam_et_justo_duo_dolores_et_ea_rebum_stet_clita_kasd_gubergren_no_sea_takimata_sanctus_est_lorem_ipsum_dolor_sit_amet_lorem_ipsum_dolor_sit_amet" translatable="false">Lorem ipsum dolor sit amet, consetetur tempor invidunt ut labore et  est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet</string>
    <string name="accept_the_term_and_condition" translatable="false">Accept the Term and Condition\n</string>
    <string name="accept_the_privacy_policy" translatable="false">Accept the Privacy Policy</string>
    <string name="term_and_condition" translatable="false">Terms and Conditions</string>
    <string name="privacy_policy" translatable="false">Data Privacy</string>
    <string name="terms_conditions" translatable="false"><![CDATA[Terms & Conditions]]></string>
    <string name="last_updated_on_23_may_2023" translatable="false">Last updated on 23 May 2023</string>
    <string name="reject" translatable="false">Reject</string>
    <string name="accept" translatable="false">Accept</string>
    <string name="my_connections" translatable="false">My Connections</string>
    <string name="name" translatable="false">Name</string>
    <string name="enter_name" translatable="false">Enter name</string>
    <string name="_91_1234567890" translatable="false">+91 1234567890</string>
    <string name="email_address" translatable="false">Email Address</string>
    <string name="_0_150" translatable="false">(0/150)</string>
    <string name="_150_150" translatable="false">(150/150)\n</string>
    <string name="write_here" translatable="false">write here</string>
    <string name="update" translatable="false">Update</string>
    <string name="change_cover" translatable="false">Change cover</string>
    <string name="business_n_verification" translatable="false">Business \nVerification</string>
    <string name="select_your_business_type" translatable="false">Select your Business type</string>
    <string name="full_name" translatable="false">Full name</string>
    <string name="enter_full_name" translatable="false">Enter full name</string>
    <string name="using_gps" translatable="false">Using GPS</string>
    <string name="current_location" translatable="false">Current Location</string>
    <string name="enter_location_manually" translatable="false">Enter Location Manually</string>
    <string name="or" translatable="false">or</string>
    <string name="want_to_earn_money" translatable="false">Want to Earn Money?</string>
    <string name="add_the_service_which_you_are_expert_in" translatable="false">Add the service which you are expert in</string>
    <string name="add_service" translatable="false">+ Add Service</string>
    <string name="near_by" translatable="false">Near by</string>
    <string name="add_service_" translatable="false">Add Service</string>
    <string name="service_mode" translatable="false">Service Mode</string>
    <string name="at_centre" translatable="false">At Centre</string>
    <string name="at_home" translatable="false">At home</string>
    <string name="category" translatable="false">Category</string>
    <string name="sub_category" translatable="false">Sub-category</string>
    <string name="yoga" translatable="false">Yoga</string>
    <string name="about_service" translatable="false">About Service</string>
    <string name="photos" translatable="false">Photos</string>
    <string name="add_image" translatable="false">+ Add Image</string>
    <string name="add" translatable="false">Add</string>
    <string name="availability" translatable="false">Availability</string>
    <string name="select_session" translatable="false">Select Session</string>
    <string name="add_hours" translatable="false">+ Add hours</string>
    <string name="start_time" translatable="false">Start time</string>
    <string name="end_time" translatable="false">End time</string>
    <string name="mon" translatable="false">Mon</string>
    <string name="enter_price" translatable="false">Enter price</string>
    <string name="price_at_centre" translatable="false">Price (At Centre)</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="gallery" translatable="false">Gallery</string>
    <string name="price" translatable="false">Price</string>
    <string name="my_services" translatable="false">My Services</string>
    <string name="business_name" translatable="false">Business name</string>
    <string name="the_electronic_hub" translatable="false">The Electronic Hub</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="please_enter_a_valid_e_mail" translatable="false">Please enter valid email\n</string>
    <string name="enter_email_address" translatable="false">Enter Email Address</string>
    <string name="are_you_logout" translatable="false">Are you sure want to logout?</string>
    <string name="hello_abhishek_how_are_you" translatable="false">Hello Abhishek, How are you?</string>
    <string name="save" translatable="false">Save</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="sbi100" translatable="false">SBI100</string>
    <string name="state_bank_of_india" translatable="false">State Bank of India</string>
    <string name="cashback_up_to_usd_10_on_the_item_total_above_1100" translatable="false">Cashback up to USD 10 on the item total above \n1100</string>
    <string name="decline" translatable="false">Decline</string>
    <string name="no" translatable="false">No</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="_10_30_am" translatable="false">10:30 AM</string>
    <string name="ravi_bishnoi_sent_you_a_connections_request" translatable="false">sent you a Connections request</string>
    <string name="delete_chat" translatable="false">Delete Chat</string>
    <string name="select_bank" translatable="false">Select Bank</string>
    <string name="current_account" translatable="false">Current account</string>
    <string name="savings_account" translatable="false">Savings account</string>
    <string name="select_account_type" translatable="false">Select Account type</string>
    <string name="enter_document_type" translatable="false">Enter document type</string>
    <string name="document_type" translatable="false">Document Type</string>
    <string name="enter_document_number" translatable="false">Enter document number</string>
    <string name="document_number" translatable="false">Document number</string>
    <string name="enter_account_name" translatable="false">Enter account name</string>
    <string name="account_name" translatable="false">Account Name</string>
    <string name="enter_account_number" translatable="false">Enter account number</string>
    <string name="account_number" translatable="false">Account Number</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete?</string>
    <string name="yes_delete">Yes, Delete</string>
</resources>