<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="click"
            type="com.example.servivet.ui.main.adapter.CouponAdapter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

<View
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:background="@color/grey_F8F8F8"
    android:layout_height="5dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/couponName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/black"
            android:paddingHorizontal="11dp"
            android:paddingVertical="4dp"
            android:background="@drawable/rectangle_dot_black_grey"
            android:text="@string/sbi100"/>
        <TextView
            android:id="@+id/applyCoupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:paddingHorizontal="14dp"
            android:paddingVertical="5dp"
            android:background="@drawable/round_corner_app_theme_8dp"
            android:text="@string/apply"/>


    </RelativeLayout>
    <View
        android:layout_marginTop="10.5dp"
        android:layout_width="match_parent"
        android:background="@color/grey_707070"
        android:layout_height="0.06dp"/>
        <TextView
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="21dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="15dp"
            android:text="@string/state_bank_of_india"/>
        <TextView
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="20dp"
            android:maxLines="3"
            android:fontFamily="@font/poppins_regular"
            android:ellipsize="end"
            android:layout_marginStart="21dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginEnd="50dp"
            android:textSize="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cashback_up_to_usd_10_on_the_item_total_above_1100"/>

</LinearLayout>
    </LinearLayout>

</layout>