<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="click"
            type="com.example.servivet.ui.main.view_model.ConnectionRequestViewModel.ClickAction" />


    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="15sp"
        android:layout_marginStart="10sp"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img"

            android:layout_width="62dp"
            android:layout_height="62dp"
            android:src="@mipmap/profile_background_icon" />

        <RelativeLayout
            android:id="@+id/toplayout"
            android:layout_toRightOf="@+id/img"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_marginStart="13dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:textSize="14dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:maxLines="2"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="5dp"
                    android:ellipsize="end"
                    android:text="@string/ravi_bishnoi_sent_you_a_connections_request"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_toRightOf="@+id/name"
                    android:layout_width="wrap_content"
                    android:textSize="13dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black_2"
                    android:maxLines="2"
                    android:visibility="gone"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:text="@string/hello_abhishek_how_are_you"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:layout_below="@+id/name"
                    android:layout_marginEnd="20dp"
                    android:maxLength="15"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"
                    android:textColor="#818181"
                    android:text="@string/_10_30_am"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/img"
            android:layout_below="@+id/toplayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/decline"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingVertical="7dp"
                android:layout_marginEnd="15dp"
                android:textSize="15dp"
                android:background="@drawable/rectangle_grey_e9ebea_8dp"
                android:textColor="@color/black_2"
                android:fontFamily="@font/poppins_medium"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/accept"
                android:textSize="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/round_corner_app_theme_8dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingVertical="7dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <View
            android:layout_toRightOf="@+id/img"
            android:layout_below="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_F3F3F3" />

    </RelativeLayout>

</layout>